--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             let scoreInput = document.createElement("input");
             scoreInput.type = "radio";
             scoreInput.value = i;
-            scoreInput.id = (num-1)*4 + Number(wav[1]) + "-" + i;
+            scoreInput.id = (num-1)*4 + Number(wav[1]);
             scoreInput.name = wav[2];
             if (i === 1) {
                 scoreInput.checked = true;
